platform/redis-insight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    cnrm.cloud.google.com/project-id: arik-kfir
  labels:
    app.kubernetes.io/name: redis-insight
  name: redis-insight
